Skip to content

SMB network buffering

Hey,

I had this problem before on other versions of VLC, but it seems to have returned now on 3.0.1 (I tried a nightly to see if it's resolved there).

When I try to play a music file from my NAS located on the local network, from which I can copy with more than 100Mb/sec, VLC always seems not being able to load enough amount data for itself to play the requested file.

I've tried increasing the network and file buffers up to 20sec, but it didn't help. Here's an example of a debug log of an always-rebuffering media file play:

main debug: Buffering 23%
main debug: Buffering 24%
main debug: Buffering 25%
---snip---
main debug: Buffering 96%
main debug: Buffering 97%
main debug: Buffering 98%
main debug: Buffering 99%
main debug: Stream buffering done (20062 ms in 39525 ms)
main debug: Decoder wait done in 0 ms
main warning: buffer too late (-82880 us): dropped
mmdevice debug: state changed: 0
wasapi debug: reset
main debug: inserting 4448 zeroes
mmdevice debug: state changed: 1
main error: ES_OUT_SET_(GROUP_)PCR is called too late (pts_delay increased to 20010 ms)
main debug: ES_OUT_RESET_PCR called
main debug: Buffering 0%
main debug: Buffering 1%
main debug: Buffering 2%
main debug: Buffering 3%
main debug: Buffering 4%
main debug: Buffering 5%
main debug: Buffering 6%
---snip---
main debug: Buffering 94%
main debug: Buffering 95%
main debug: Buffering 96%
main debug: Buffering 97%
main debug: Buffering 98%
main debug: Buffering 99%
main debug: Stream buffering done (20062 ms in 29434 ms)
main debug: Decoder wait done in 0 ms
main warning: buffer too late (-82881 us): dropped
mmdevice debug: state changed: 0
wasapi debug: reset
main debug: inserting 4492 zeroes
mmdevice debug: state changed: 1
main error: ES_OUT_SET_(GROUP_)PCR is called too late (pts_delay increased to 20098 ms)
main debug: ES_OUT_RESET_PCR called
main debug: Buffering 0%
main debug: Buffering 1%
main debug: Buffering 2%
main debug: Buffering 3%
main debug: Buffering 4%
main debug: Buffering 5%
main debug: Buffering 6%
main debug: Buffering 7%
---snip---
main debug: Buffering 65%
main debug: Buffering 66%
main debug: Buffering 67%
main debug: Buffering 68%
main debug: Buffering 69%
flac debug: emulated sync word
main debug: Buffering 70%
main debug: Buffering 71%
main debug: Buffering 72%
main debug: Buffering 73%
main debug: Buffering 74%
---snip---
main debug: Buffering 94%
main debug: Buffering 95%
main debug: Buffering 96%
main debug: Buffering 97%
main debug: Buffering 98%
main debug: Buffering 99%
main debug: Stream buffering done (20154 ms in 44780 ms)
main debug: Decoder wait done in 0 ms
main warning: buffer too late (-82880 us): dropped
mmdevice debug: state changed: 0
wasapi debug: reset
main debug: inserting 4492 zeroes
mmdevice debug: state changed: 1

as you can see, it loads 20 seconds of media in sometimes 44 seconds, and then it keeps buffering.

Again, it needs to be mentioned that I can copy from the NAS through the same wifi network with more than 100Mbps speed, over SMB.

When I map a network drive from the nas, and play the media file from there, the same phenomenon happens.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information