prefetch: match read size from versions 2.2

VLC versions 2.2 and earlier had 3 "tracks" buffers of 4 MiB each for
the input stream. This resulted in single reads of (up to) 4 MiB.
This patch matches the read size and thus performance of said older
versions.

This matches 6f58cd15a29ec77f5117e709a5c5a7126b9148c8 in a less invasive
fashion. Fixes #19806, #19988, #21470.